[package]
name = "egli"
version = "0.1.2"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "EGL Interface"
repository = "https://github.com/Nercury/egli-rs"
documentation = "http://nercury.github.io/egli-rs/egli/index.html"

[dev-dependencies.x11]
features = ["xlib"]
version = "2.3"

[dev-dependencies.gl]
version = "0.6"

[dependencies]
libc = "0.2"
bitflags = "0.5"

[features]
egl_1_5 = []
